@@ -19,6 +19,7 @@ Device specific changes/fixes
 	* HoTTAdapter2 - update graphics template files to have voltage in blue, current in red, ...
 	* OpenTx-Telemetry - correct parsing of GPS tag with coordinates in degree with different decimals
 	* Schulze next - initial implementation (not tested with real hardware)
+	* CSV2SerialAdapter - add temporary capability to write request each time before reading data
 
 
 Version 3.5.1 - 25 Oct 2021
